Thanks nishi980 for the report.

Fix: My build process was including some files from a snakebite install run, hard to say what if any issues this caused beyond a bigger install size - thanks caplag for the report.

Debug: InfCore.RefreshFileList outputs to cmd_stderr.txt

r236 - 2010-03-18
Fix: InfExtToMgsv mgsvToExtComplete not being set leasing ih_toextcmds.txt to always write all commands, which eventually IHExt would get fed up with. Was somehow lost in some refactoring. Thanks OldBoss for the report.

r235 - 2020-03-15
gameOverOnDiscovery/ now works in free roam.
gameOverOnDiscovery added to playerRestrictionsInMissionMenu
playerRestrictionsInMissionMenu added (actually renamed back to it's actual name and markersInMissionMenu split off). Thanks Steve Harvery for the prompt.

Fix: UAVs on FOB should show their correct grade.
Bug was due from me missing a subltle change while merging the mgsv 1.09 patch in April 2016, ouch.
It got lost in the noise of variable name changes due to the minified lua files. Thanks elquinto for the belated report.

InfUserMarker.PrintMarkerGameObject
Fix: PrintMarkerGameObject sol svars print.
Added: Prints GetPosition of object.

r234 - 2020-02-10
Refactor: Data: Build veh_rl_*_ih packs based on the veh_rl_ packs, removed modded veh_rl fox2s, which suould free up mods for the player vehicles without conflicting with that.
IH modified the player / veh_rl vehicle packs for it's free roam vehicle patrol option.

1. Because the packs were nice complete packs for vehicles, which was important in the early days when I didn't have the knowledge or tooling to create my own fpks.

2. To bump up the instance count for TppVehicle2BodyData and TppVehicle2AttachmentData because I hit the issue of them using up the instances resulting in sideops vehicles appearing invisible.
